k8s/revue-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.enable: "true"
    traefik.http.routers.frontend.entrypoints: websecure
    traefik.http.routers.frontend.rule: Host(`frontend.localhost`)
    traefik.http.routers.frontend.tls.certresolver: myresolver
  labels:
    io.kompose.service: revue-frontend
  name: revue-frontend
spec:
  rules:
    - host: frontend.localhost
      http:
        paths:
          - backend:
              service:
                name: revue-frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
